# bean-sieve

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bean-sieve.example.yaml  bean-sieve.schema.json  pyproject.toml
.claude/skills/create-provider/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2025-01-29-export-command-design.md
docs/superpowers/plans/: 2026-04-22-posting-meta-diagnostics.md
docs/superpowers/specs/: 2026-04-22-posting-meta-diagnostics-design.md
src/bean_sieve/: __init__.py  api.py  cli.py
src/bean_sieve/config/: __init__.py  schema.py  wizard.py
src/bean_sieve/core/: __init__.py  export.py  output.py  predictor.py  preset_rules.py  rules.py  sieve.py  suggest.py  types.py
src/bean_sieve/providers/: __init__.py  base.py
src/bean_sieve/providers/banks/: __init__.py
src/bean_sieve/providers/banks/credit/: __init__.py  abc.py  boc.py  bocom.py  bosc.py  ccb.py  cgb.py  cib.py  citic.py  cmb.py  cmbc.py  cncb.py  hsbchk.py  hxb.py
src/bean_sieve/providers/banks/debit/: __init__.py  abc.py  boc.py  bocom.py  ccb.py  cib.py  cmb.py  cncbi.py  hsbchk.py  icbc.py  pab.py  welab.py  zabank.py
src/bean_sieve/providers/crypto/: __init__.py
src/bean_sieve/providers/payment/: __init__.py  _utils.py  alipay.py  app_store.py  jd.py  meituan.py  wechat.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_export.py  test_hooks.py  test_output.py  test_rules.py  test_sieve.py  test_types.py
tests/providers/: __init__.py  test_abc.py  test_abc_debit.py  test_alipay.py  test_app_store.py  test_boc.py  test_boc_debit.py  test_bocom.py  test_bocom_debit.py  test_bosc.py  test_ccb.py  test_ccb_debit.py  test_cgb.py  test_cib.py  test_cib_debit.py  test_citic.py  test_cmb.py  test_cmb_debit.py  test_cmbc.py  test_cncb.py  test_cncbi_debit.py  test_hsbchk_credit.py  test_hsbchk_debit.py  test_hxb.py  test_icbc.py  test_jd.py  test_meituan.py  test_pab.py  test_wechat.py  test_welab.py  test_zabank.py
