[project]
name = "beancount-sieve"
version = "0.2.0"
description = "Rule-based statement importer and reconciler for Beancount"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cyrus" }]
keywords = ["beancount", "accounting", "import", "reconcile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "beancount>=3.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "ruamel.yaml>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "openpyxl>=3.1.5",

    "iterfzf>=1.0.0",
    "beancount-periodic>=0.2.1",
    "xlrd>=2.0.2",
    "pymupdf>=1.24.0",
    "beanfmt>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/Xm798/bean-sieve"
Repository = "https://github.com/Xm798/bean-sieve"
Changelog = "https://github.com/Xm798/bean-sieve/blob/master/CHANGELOG.md"
Issues = "https://github.com/Xm798/bean-sieve/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
bean-sieve = "bean_sieve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bean_sieve"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "ARG001", # unused function argument (common in abstract methods)
]

[tool.ruff.lint.isort]
known-first-party = ["bean_sieve"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "xlwt>=1.3.0",
]
